[package]
name = "html-keywords-matching"
license = "MIT OR Apache-2.0"
description = "use ac trie to match keywords in html and replace them with a span tag"
repository = "https://github.com/RosenX/keywords_matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
